--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-redux": "^8.1.2",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "use-local-storage": "^3.0.0",
