--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.9",
+    "@mui/lab": "^5.0.0-alpha.147",
     "@mui/material": "^5.14.10",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
@@ -16,6 +17,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
+    "jwt-decode": "^3.1.2",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
