--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "react-redux": "^8.1.2",
         "react-router-dom": "^6.16.0",
         "react-scripts": "5.0.1",
+        "typescript": "^4.9.5",
         "use-local-storage": "^3.0.0",
         "web-vitals": "^2.1.4"
     },
@@ -48,13 +49,12 @@
     },
     "devDependencies": {
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-        "@typescript-eslint/eslint-plugin": "^6.9.0",
-        "@typescript-eslint/parser": "^6.9.0",
-        "eslint": "^8.52.0",
+        "@typescript-eslint/eslint-plugin": "^6.8.0",
+        "@typescript-eslint/parser": "^6.8.0",
+        "eslint": "^8.51.0",
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-prettier": "^5.0.1",
         "eslint-plugin-react": "^7.33.2",
-        "prettier": "^3.0.3",
-        "typescript": "^5.2.2"
+        "prettier": "^3.0.3"
     }
 }
